integrated all apis

--- a/src/components/RegisterForm/RegisterForm.css
+++ b/src/components/RegisterForm/RegisterForm.css
@@ -1,7 +1,7 @@
 .register-form {
   max-width: 400px;
   margin: 40px auto;
-  padding: 20px;
+  padding: 60px 60px 60px 48px;
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 10px;
