--- a/src/components/UserDetails/UserDetails.css
+++ b/src/components/UserDetails/UserDetails.css
@@ -1,9 +1,15 @@
-.user-details-container {
-  max-width: 400px;
+.user-details-content {
+  max-width: 800px;
   margin: 40px auto;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: hsl(168, 25%, 84%);
   border: 1px solid #ddd;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+pre {
+  font-size: 16px;
+  font-family: monospace;
+  white-space: pre-wrap;
 }
