--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,12 @@ body {
 }
 
 .app-header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #f4f4f4;
+  border-bottom: 1px solid #ddd;
 }
 
 .app-header h1 {
@@ -19,4 +21,29 @@ body {
 .app-header a {
   text-decoration: none;
   color: #fff;
+}
+
+.layout-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+
+.logout-button {
+  background-color: #f44336; /* Red background */
+  color: white; /* White text */
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.logout-button:hover {
+  background-color: #d32f2f; /* Darker red on hover */
+}
+
+main {
+  flex: 1;
+  padding: 20px;
 }
